# chunks-rs

./: Cargo.toml  README.md
src/: chunk.rs  edge_conf.rs  factory.rs  internal.rs  lib.rs  plate.rs  slab.rs  utils.rs  wayland.rs  x11.rs
src/position/: edge_conf.rs  mod.rs
src/taskbar/: bar.rs  mod.rs
src/utils/: utils.rs
src/widgets/: chunk.rs  mod.rs  plate.rs  slab.rs
