[package]
name = "chunks-rs"
version = "0.1.0"
authors = ["Derek Russell russellderek01@gmail.com"]
edition = "2021"

license = "MIT OR Apache-2.0"
categories = ["gui", "date_and_time", "value_formatting", "filesystem"]
keywords = ["widget", "GUI", "widgets", "frontend", "toolkit"]

description = "A library for making GTK4 widgets, inspired by Elkowar's Wacky Widgets."
repository = "https://github.com/drkrssll/chunks-rs/"
homepage = "https://github.com/drkrssll/chunks-rs/blob/main/README.md"

[dependencies]
chrono = "0.4.38"
gio = "0.20.4"
gtk4 = { version = "0.9.2", features = ["v4_6"] }
gtk4-layer-shell = "0.4.0"
sysinfo = "0.29.3"
